// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration: group-layouts fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
legend right
  |= component |= #4A90D9 |
  |= derived |= #9B59B6 |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= Exported |= #95A5A6 |
  |= function |= #3498DB |
  |= layout |= #2ECC71 |
  |= LayoutLoad |= #1ABC9C |
  |= page |= #27AE60 |
  |= PageLoad |= #16A085 |
  |= state |= #E74C3C |
  |= store |= #E67E22 |
endlegend

class "+layout" <<component>> {
  + children: unknown
}

class "+layout" <<component>> {
  + children: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
  + data: unknown
}

class "+page" <<component>> {
  + data: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
}

class "UserProfile" <<component>> {
  + userId: unknown
}

class "load" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "+layout" as _layout <<layout>> {
  path: /(app)
  group: app
}

class "+layout" as _layout <<layout>> {
  path: /(auth)
  group: auth
}

class "+page" as _page <<page>> {
  path: /(app)/dashboard
  group: app
}

class "+page" as _page <<page>> {
  path: /(app)/docs/[...slug]
  rest slug
  group: app
}

class "+page" as _page <<page>> {
  path: /(app)/users/[id]
  dynamic id
  group: app
}

class "+page" as _page <<page>> {
  path: /(auth)/login
  group: auth
}

class "+page" as _page <<page>> {
  path: /(auth)/register
  group: auth
}

@enduml"
`;

exports[`Integration: minimal-sveltekit fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
legend right
  |= component |= #4A90D9 |
  |= derived |= #9B59B6 |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= Exported |= #95A5A6 |
  |= function |= #3498DB |
  |= layout |= #2ECC71 |
  |= LayoutLoad |= #1ABC9C |
  |= page |= #27AE60 |
  |= PageLoad |= #16A085 |
  |= state |= #E74C3C |
  |= store |= #E67E22 |
endlegend

class "userStore" <<store>> {
  storeType: writable
  valueType: User | null
}

class "+layout" <<component>> {
  + children: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
}

class "Button" <<component>> {
  + label: unknown
  + onClick: unknown
}

class "clearUser" <<function>> <<Exported>> {
}

class "GET" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "POST" <<function>> <<Exported>> {
}

class "setUser" <<function>> <<Exported>> {
}

class "+layout" as _layout <<layout>> {
  path: /
}

class "+page" as _page <<page>> {
  path: /
}

class "+page" as _page <<page>> {
  path: /auth
}

class "+server" as _server <<endpoint>> {
  path: /api/users
}

_page ..> setUser : $userStore <<store-subscription>>
@enduml"
`;

exports[`Integration: svelte-stores fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
legend right
  |= component |= #4A90D9 |
  |= derived |= #9B59B6 |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= Exported |= #95A5A6 |
  |= function |= #3498DB |
  |= layout |= #2ECC71 |
  |= LayoutLoad |= #1ABC9C |
  |= page |= #27AE60 |
  |= PageLoad |= #16A085 |
  |= state |= #E74C3C |
  |= store |= #E67E22 |
endlegend

class "isLoggedIn" <<store>> {
  storeType: derived
  valueType: unknown
}

class "userName" <<store>> {
  storeType: derived
  valueType: unknown
}

class "+page" <<component>> {
}

class "createAuthActions" <<function>> <<Exported>> {
}

class "debounce" <<function>> <<Exported>> {
}

class "formatDate" <<function>> <<Exported>> {
}

class "useCounters" <<function>> <<Exported>> {
}

class "+page" as _page <<page>> {
  path: /
}

createAuthActions ..> src_lib_stores_user_svelte_ts : userStore
useCounters ..> useCounters : counter
_page ..> createAuthActions : $userName <<store-subscription>>
_page ..> createAuthActions : $isLoggedIn <<store-subscription>>
@enduml"
`;

exports[`Integration: sveltekit-synthetic fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
legend right
  |= component |= #4A90D9 |
  |= store |= #E67E22 |
  |= state |= #E74C3C |
  |= derived |= #9B59B6 |
  |= page |= #27AE60 |
  |= layout |= #2ECC71 |
  |= PageLoad |= #16A085 |
  |= LayoutLoad |= #1ABC9C |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= function |= #3498DB |
  |= Exported |= #95A5A6 |
endlegend

interface "CartItem" as CartItem {
  + id: string
  + name: string
  + quantity: number
}

interface "Product" as Product {
  + id: string
  + name: string
  + price: number
}

class "cart" <<state>> {
  storeType: writable
  valueType: { length: number }
}

class "productCount" <<store>> {
  storeType: derived
  valueType: unknown
}

class "products" <<store>> {
  storeType: writable
  valueType: Product[]
}

class "Card" <<component>> {
  + label: unknown
  + onClick: unknown
}

class "Header" <<component>> {
  + title: unknown
}

class "+layout" <<component>> {
  + children: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
}

class "+error" <<component>> {
  + error: unknown
  + status: unknown
}

class "+layout" <<component>> {
  + children: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
}

class "+page" <<component>> {
  + data: unknown
}

class "+page" <<component>> {
  + data: unknown
}

class "addItem" <<function>> <<Exported>> {
}

class "clearCart" <<function>> <<Exported>> {
}

class "removeItem" <<function>> <<Exported>> {
}

class "addProduct" <<function>> <<Exported>> {
}

class "formatDate" <<function>> <<Exported>> {
}

class "slugify" <<function>> <<Exported>> {
}

class "truncate" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "GET" <<function>> <<Exported>> {
}

class "POST" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "+layout" as _layout <<layout>> {
  path: /(auth)
  group: auth
}

class "+page" as _page <<page>> {
  path: /(auth)/login
  group: auth
}

class "+page" as _page <<page>> {
  path: /(auth)/register
  group: auth
}

class "+error" as _error <<error-page>> {
  path: /
}

class "+layout.server" as _layout_server <<LayoutLoad>> {
  path: /
}

class "+layout" as _layout <<layout>> {
  path: /
}

class "+page" as _page <<page>> {
  path: /
}

class "+page" as _page <<page>> {
  path: /about
}

class "+server" as _server <<endpoint>> {
  path: /api/items
}

class "+page" as _page <<page>> {
  path: /docs/[...slug]
  rest slug
}

class "+page.server" as _page_server <<PageLoad>> {
  path: /products/[id]
  dynamic id
}

class "+page" as _page <<page>> {
  path: /products/[id]
  dynamic id
}

@enduml"
`;

exports[`Integration: synthetic fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
legend right
  |= component |= #4A90D9 |
  |= derived |= #9B59B6 |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= Exported |= #95A5A6 |
  |= function |= #3498DB |
  |= layout |= #2ECC71 |
  |= LayoutLoad |= #1ABC9C |
  |= page |= #27AE60 |
  |= PageLoad |= #16A085 |
  |= state |= #E74C3C |
  |= store |= #E67E22 |
endlegend

class "count" <<store>> {
  storeType: writable
  valueType: unknown
}

class "doubleCount" <<store>> {
  storeType: derived
  valueType: unknown
}

class "+layout" <<component>> {
  + children: unknown
}

class "+page" <<component>> {
}

class "Button" <<component>> {
  + disabled?: unknown
  + label: unknown
  + variant?: unknown
}

class "Card" <<component>> {
  + children: unknown
  + footer: unknown
  + title: unknown
}

class "formatPrice" <<function>> <<Exported>> {
}

class "GET" <<function>> <<Exported>> {
}

class "greet" <<function>> <<Exported>> {
}

class "isPositive" <<function>> <<Exported>> {
}

class "POST" <<function>> <<Exported>> {
}

class "reset" <<function>> <<Exported>> {
}

class "+layout" as _layout <<layout>> {
  path: /
}

class "+page" as _page <<page>> {
  path: /
}

class "+server" as _server <<endpoint>> {
  path: /api/data
}

Button ..> Card : click
Card --> Button : Button
_page ..> reset : $count <<store-subscription>>
_page ..> reset : $doubleCount <<store-subscription>>
@enduml"
`;
